--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,10 @@
   "receipes": "Receipes",
   "notes": "Notes",
   "link": "Link",
-  "total": "Total"
+  "total": "Total",
+  "allPurposeFlourT55": "All Purpose Unbleached White Flour",
+  "breadFlourT165": "Whole Wheat Bread Flour",
+  "salt": "Salt",
+  "stiffStarter": "Stiff starter",
+  "water": "Water"
 }
