--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,8 @@
   "breadFlourT165": "Whole Wheat Bread Flour",
   "salt": "Salt",
   "stiffStarter": "Stiff starter",
-  "water": "Water"
+  "water": "Water",
+  "activeDryYeast": "Active dry yeast",
+  "allPurposeFlour": "All Purpose Unbleached White Flour",
+  "oliveOil": "Olive oil"
 }
