--- a/public/locales/fr-CA/translation.json
+++ b/public/locales/fr-CA/translation.json
@@ -1,11 +1,5 @@
 {
-  "receipes": "Recettes",
-  "notes": "Remarques",
-  "link": "Lien",
-  "total": "Total",
   "allPurposeFlourT55": "Farine tout usage blanche non blanchie",
   "breadFlourT165": "Farine de blé entier à pain",
-  "water": "Eau",
-  "stiffStarter": "Levain pateux",
-  "salt": "Sel"
+  "activeDryYeast": "Levure sèche active"
 }
