--- a/public/locales/fr-FR/translation.json
+++ b/public/locales/fr-FR/translation.json
@@ -1,11 +1,3 @@
 {
-  "receipes": "Recettes",
-  "notes": "Remarques",
-  "link": "Lien",
-  "total": "Total",
-  "allPurposeFlourT55": "Farine de blé T55",
-  "breadFlourT165": "Farine de blé T165",
-  "water": "Eau",
-  "stiffStarter": "Levain pateux",
-  "salt": "Sel"
+  "activeDryYeast": "Levure de boulanger"
 }
