--- a/public/locales/fr-CA/translation.json
+++ b/public/locales/fr-CA/translation.json
@@ -1,5 +1,6 @@
 {
   "allPurposeFlourT55": "Farine tout usage blanche non blanchie",
   "breadFlourT165": "Farine de blé entier à pain",
-  "activeDryYeast": "Levure sèche active"
+  "activeDryYeast": "Levure sèche active",
+  "allPurposeFlour": "Farine tout usage blanche non blanchie"
 }
