add puff pastry

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,7 @@
   "water": "Water",
   "activeDryYeast": "Active dry yeast",
   "allPurposeFlour": "All Purpose Unbleached White Flour",
-  "oliveOil": "Olive oil"
+  "oliveOil": "Olive oil",
+  "meltedButter": "Melted butter",
+  "butter": "Butter"
 }
