--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -10,5 +10,7 @@
   "salt": "Sel",
   "allPurposeFlour": "Farine de blé T55",
   "activeDryYeast": "Levure sèche",
-  "oliveOil": "Huile d'olive"
+  "oliveOil": "Huile d'olive",
+  "meltedButter": "Beurre fondu",
+  "butter": "Beurre"
 }
