Add brioche receipe

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,8 @@
   "allPurposeFlour": "All Purpose Unbleached White Flour",
   "oliveOil": "Olive oil",
   "meltedButter": "Melted butter",
-  "butter": "Butter"
+  "butter": "Butter",
+  "oatMilk": "Oat milk",
+  "egg": "Egg",
+  "brownSugar": "Brown Sugar"
 }
