--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -12,5 +12,8 @@
   "activeDryYeast": "Levure sèche",
   "oliveOil": "Huile d'olive",
   "meltedButter": "Beurre fondu",
-  "butter": "Beurre"
+  "butter": "Beurre",
+  "egg": "Oeuf",
+  "oatMilk": "Lait d'avoine",
+  "brownSugar": "Cassonade"
 }
