--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,7 @@
   "butter": "Butter",
   "oatMilk": "Oat milk",
   "egg": "Egg",
-  "brownSugar": "Brown Sugar"
+  "brownSugar": "Brown Sugar",
+  "bakingPowder": "Baking powder",
+  "whiteSugar": "White sugar"
 }
