--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -15,5 +15,7 @@
   "butter": "Beurre",
   "egg": "Oeuf",
   "oatMilk": "Lait d'avoine",
-  "brownSugar": "Cassonade"
+  "brownSugar": "Cassonade",
+  "bakingPowder": "Levure chimique",
+  "whiteSugar": "Sucre"
 }
