--- a/public/locales/fr-CA/translation.json
+++ b/public/locales/fr-CA/translation.json
@@ -2,5 +2,6 @@
   "allPurposeFlourT55": "Farine tout usage blanche non blanchie",
   "breadFlourT165": "Farine de blé entier à pain",
   "activeDryYeast": "Levure sèche active",
-  "allPurposeFlour": "Farine tout usage blanche non blanchie"
+  "allPurposeFlour": "Farine tout usage blanche non blanchie",
+  "bakingPowder": "Poudre à pâte"
 }
