--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,6 @@
   "egg": "Egg",
   "brownSugar": "Brown Sugar",
   "bakingPowder": "Baking powder",
-  "whiteSugar": "White sugar"
+  "whiteSugar": "White sugar",
+  "honey": "Honey"
 }
