--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -17,5 +17,6 @@
   "oatMilk": "Lait d'avoine",
   "brownSugar": "Cassonade",
   "bakingPowder": "Levure chimique",
-  "whiteSugar": "Sucre"
+  "whiteSugar": "Sucre",
+  "honey": "Miel"
 }
