--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,7 @@
   "brownSugar": "Brown Sugar",
   "bakingPowder": "Baking powder",
   "whiteSugar": "White sugar",
-  "honey": "Honey"
+  "honey": "Honey",
+  "almondFlour": "Almond flour",
+  "eggWhite": "Egg white"
 }
