--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -18,5 +18,7 @@
   "brownSugar": "Cassonade",
   "bakingPowder": "Levure chimique",
   "whiteSugar": "Sucre",
-  "honey": "Miel"
+  "honey": "Miel",
+  "almondFlour": "Poudre d'amandes",
+  "eggWhite": "Blanc d'oeuf"
 }
