feat: add canneles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,5 +20,9 @@
   "whiteSugar": "White sugar",
   "honey": "Honey",
   "almondFlour": "Almond flour",
-  "eggWhite": "Egg white"
+  "eggWhite": "Egg white",
+  "milk": "Milk",
+  "vanillaExtract": "Vanilla Extract",
+  "eggYolk": "Egg Yolk",
+  "rhum": "Rhum"
 }
