add creme brulee

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,5 +24,7 @@
   "milk": "Milk",
   "vanillaExtract": "Vanilla Extract",
   "eggYolk": "Egg Yolk",
-  "rhum": "Rhum"
+  "rhum": "Rhum",
+  "cream35": "Heavy cream",
+  "wholeMilk": "Whole milk"
 }
