--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -24,5 +24,7 @@
   "eggYolk": "Jaune d'œuf",
   "milk": "Lait",
   "rhum": "Rhum",
-  "vanillaExtract": "Extrait de vanille"
+  "vanillaExtract": "Extrait de vanille",
+  "cream35": "Crème 35%",
+  "wholeMilk": "Lait entier"
 }
